@@ -1,3 +1,15 @@
+Tue Feb 27 16:38:15 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>
+
+	* eval.c (ev_const_get): retrieve Object's caonstat if no current
+	  class is available (e.g. defining singleton class for Fixnums).
+
+	* eval.c (proc_call): ignore block to `call' always, despite of
+	  being orphan or not.
+
+Mon Feb 26 16:20:27 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>
+
+	* ruby.c (proc_options): call ruby_show_version() just once.
+
 Mon Feb 26 00:04:52 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>
 
 	* eval.c (proc_call): should not modify ruby_block->frame.iter
